ec2.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: CloudFormation template to configure SSM for EC2 instances.

Resources:
  # IAM Role for SSM
  SSMRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action: sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore
      RoleName: SSMRole

  # Instance Profile for the EC2 Instance
  SSMInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - !Ref SSMRole
      InstanceProfileName: SSMInstanceProfile

  # Security Group for EC2 Instance
  EC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH, HTTP, and SSM access
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: EC2SecurityGroup

  # EC2 Instance with SSM Agent
  MyEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t3.micro
      KeyName: ci-cd # Replace with the name of your existing key pair
      ImageId: ami-0c1ac8a41498c1a9c # Replace with a valid AMI ID for your region
      IamInstanceProfile: !Ref SSMInstanceProfile
      SecurityGroupIds:
        - !Ref EC2SecurityGroup
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          LOG_FILE='/var/log/user-data.log'
          exec > >(tee -a $LOG_FILE | logger -t user-data) 2>&1

          echo "Starting UserData script execution..." | tee -a ${LOG_FILE}

          # Step 1: Update the package index
          echo "Updating package index..." | tee -a ${LOG_FILE}
          sudo apt-get update

          echo "Installing curl..." | tee -a ${LOG_FILE}
          sudo apt-get install curl -y

          echo "Installing Node.js..." | tee -a ${LOG_FILE}
          curl -sL https://deb.nodesource.com/setup_current.x | sudo -E bash -
          sudo apt-get install -y nodejs

          echo "Installing Nginx..." | tee -a ${LOG_FILE}
          sudo apt-get install nginx -y

          echo "UserData script execution completed." | tee -a ${LOG_FILE}

Outputs:
  InstanceId:
    Description: The Instance ID of the EC2 instance
    Value: !Ref MyEC2Instance

  InstancePublicIp:
    Description: The public IP address of the EC2 instance
    Value: !GetAtt MyEC2Instance.PublicIp
